# accelerated

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/web/: README.md  next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/markets/: page.tsx
apps/web/app/portfolio/: page.tsx
apps/web/app/trade/: page.tsx
apps/web/components/: MarketTable.tsx
apps/web/components/layout/: Footer.tsx  Logo.tsx  Navbar.tsx
apps/web/components/trade/: Chart.tsx  MarketHeader.tsx  MarketSidebar.tsx  OrderPanel.tsx  PositionsPanel.tsx  TradeTerminal.tsx
apps/web/components/ui/: Ticker.tsx  TierBadge.tsx
apps/web/lib/: format.ts  markets.ts  trade-math.ts
docs/: README.md  architecture.md  oracle.md  risk-engine.md  threat-model.md  whitepaper.md
programs/accelerated/: Cargo.toml
programs/accelerated/src/: constants.rs  errors.rs  lib.rs
programs/accelerated/src/instructions/: close_position.rs  crank_funding.rs  deposit_liquidity.rs  initialize_market.rs  initialize_protocol.rs  liquidate.rs  mod.rs  open_position.rs  withdraw_liquidity.rs
programs/accelerated/src/state/: market.rs  mod.rs  position.rs  protocol.rs  vault.rs
programs/accelerated/src/utils/: margin.rs  math.rs  mod.rs  oracle.rs
scripts/: localnet.sh  seed-markets.ts
tests/: accelerated.test.ts
