[package]
name = "accelerated"
version = "0.2.0"
description = "Permissionless perpetuals for the long tail of Solana memecoins."
edition = "2021"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "lib"]
name = "accelerated"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
pyth-solana-receiver-sdk = "0.3.1"

[dev-dependencies]
proptest = "1.5.0"
